# ml-intern-plugin

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: ml-intern-doctor.md  ml-intern.md
ml_intern_mcp/: server.py
ml_intern_mcp/tools/: dataset_tools.py  github_find_examples.py  github_list_repos.py  github_read_file.py  hf_repo_files_tool.py  hf_repo_git_tool.py  papers_tool.py
scripts/: run-mcp.sh
skills/ml-intern/: SKILL.md
tests/: test_mcp_server_registration.py  test_skill_tool_name_parity.py  test_vendored_imports.py
