[project]
name = "ml-intern-plugin"
version = "0.1.1"
description = "Claude Code plugin: autonomous ML research agent with HF ecosystem tools and ML-shaped GitHub search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27",
  "httpx>=0.27",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "whoosh>=2.7",
  "huggingface_hub>=0.25",
  "nbformat>=5.10",
  "nbconvert>=7.16",
  "thefuzz>=0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ml_intern_mcp*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true
